Down to 832 errors